--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
+    "react-content-loader": "^6.1.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.49.8",
@@ -67,7 +69,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "server": "json-server --watch ./public/db.json --port=3001"
   },
   "eslintConfig": {
     "extends": [
